--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
   user-select: none;
   font-family: 'VT323', monospace;
   font-size: 1em;
+  margin. 0;
+  padding: 0;
 }
 
 body, html {
@@ -62,12 +64,19 @@ ul {
   padding: 0;
 }
 
+strong {
+  font-size: 1.5em;
+  padding: 0 5px;
+}
+
 .canvas {
   background: linear-gradient(to top left, rgb(233, 233, 233), #ffffff00);
   height: 256px;
   width: 256px;
   margin: 0 auto;
-  overflow: hidden;
+  overflow: hidden;  
+  box-shadow: 2px 5px 5px 0.8px rgba(0,0,0,0.35);
+  border-radius: 5px;
 }
 
 .square {
@@ -81,15 +90,6 @@ ul {
 .square-grid {  
   border: 1px solid #63737321;
 }
-
-.btn-color {
-  width: 25px;
-  height: 25px;
-  margin-top: -4px;
-  box-shadow: 0 0 5px 2px rgb(216, 216, 216);
-  opacity: 0.01;
-  cursor: pointer;
-} 
 
 /* Tools */
 .grids-list {
@@ -120,7 +120,9 @@ ul {
 }
 
 .btn-select-grid {
-  border: 1px solid rgba(0, 0, 0, 0.11);
+  border: 1px solid rgba(0, 0, 0, 0.11);  
+  box-shadow: 1px 2.5px 5px 0.4px rgba(0,0,0,0.35);
+  border-radius: 5px;
 }
 
 .btn-select-grid:hover {
@@ -135,19 +137,34 @@ ul {
   height: 50px;
   border: 1px solid grey;
   border-radius: 50px;
+  box-shadow: 0 0 5px 0.8px rgba(0,0,0,0.35);
 }
 
-.btn-take-screen:hover {
-  background-color: rgba(0, 0, 0, 0.205);
+.btn-take-screen:hover{
+  background-color: rgba(0, 0, 0, 0.205);  
   color: white;
   transform: scale(1.2) !important;
 }
 
-.color-label {
-  width: 25px;
+.btn-take-screen:active {  
+  background-color: rgba(0, 0, 0, 0.205); 
+  background-color: #ff9a76; 
+}
+
+.btn-color {
+  width: 31px;
   height: 25px;
+  margin-top: -4px;
+  box-shadow: 0 0 5px 2px rgb(216, 216, 216);
+  opacity: 0.01;
+  cursor: pointer;
+} 
+
+.color-label {
+  font-size: 31px;
+  filter: blur(0.5px);
   background-color: white;
-  border-radius: 50px;
+  border-radius: 100%;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.205);
   cursor: pointer;
   margin-left: 9px;
